<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DIYEdit</string>
    <string name="saveToolsKey">Save Tools</string>
    <string name="modifyGamesKey">Modify Games</string>
    <string name="modifyRecordsKey">Modify Records</string>
    <string name="modifyMangaKey">Modify Manga</string>
    <string name="openFileKey">Open file...</string>
    <string name="tagAllKey">Tag all...</string>
    <string name="metaDataEditKey">Edit metadata[Automatic detect mio file]</string>
    <string name="midiToolsKey">Play/Export MIDI</string>
    <string name="exportAllKey">Export All...</string>
    <string name="exportAllOBJKey">Export All OBJs...</string>
    <string name="viewMangaKey">View Manga...</string>
    <string name="viewBGKey">View Game BG...</string>
    <string name="editGameKey">Edit Games</string>
    <string name="editRecordKey">Edit Records</string>
    <string name="editMangaKey">Edit Mangas</string>
    <string name="unlockKey">Unlock...</string>
    <string name="title_activity_filechooser" translatable="false">Filechooser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" tools:ignore="MissingTranslation" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

</resources>